# nrf1-proteomics

./: .gitattributes  LICENSE-CODE  README.md  cspell.json  pyproject.toml  zensical.toml
.basedpyright/: baseline.json
.github/workflows/: ci.yml
data/: nrf1-proteomics-raw.csv
docs/: index.md
src/nrf1_proteomics/: _adjust_text.py  analysis.py  plots.py
tests/: test_analysis.py  test_plots.py  test_version.py
tests/examples/: test_fibonacci.py  test_fizzbuzz.py  test_palindrome.py
