[project]
name = "nrf1-proteomics"
readme = "README.md"
requires-python = ">=3.10,<4"
license = "MIT"
authors = [{ name = "Brendon Smith" }]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]
dependencies = [
  "matplotlib>=3.10,<4",
  "polars>=1.41,<2",
  "scipy>=1.14,<2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/br3ndonland/nrf1-proteomics"
Repository = "https://github.com/br3ndonland/nrf1-proteomics"

[project.scripts]
nrf1-proteomics = "nrf1_proteomics.analysis:main"
nrf1-proteomics-plots = "nrf1_proteomics.plots:main"

[project.optional-dependencies]

[dependency-groups]
checks = [
  "basedpyright>=1,<2",
  "ruff>=0.15,<0.16",
]
tests = [
  "coverage[toml]>=7,<8",
  "pytest>=9,<10",
]

[build-system]
requires = ["hatchling>=1.26.3,<2"]
build-backend = "hatchling.build"

[tool.basedpyright]
pythonVersion = "3.14"

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source_pkgs = ["nrf1_proteomics", "tests"]

[tool.coverage.paths]
nrf1_proteomics = ["src/nrf1_proteomics"]
tests = ["tests"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "LICENSE-CODE",
  "src",
  "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nrf1_proteomics"]

[tool.hatch.envs.ci]
builder = true
dev-mode = false
dependency-groups = [
  "checks",
  "tests",
]

[tool.hatch.envs.default]
dev-mode = true
dependency-groups = [
  "checks",
  "tests",
]

[tool.hatch.envs.default.scripts]
check = [
  "ruff check",
  "ruff format --check",
  "basedpyright",
  "npx -s -y prettier@'^3' . --check",
  "npx -s -y cspell --dot --gitignore *.md **/*.md",
]
format = [
  "ruff check --fix",
  "ruff format",
  "npx -s -y prettier@'^3' . --write",
]

[tool.hatch.envs.production]
dev-mode = false
dependency-groups = []

[tool.hatch.version]
path = "src/nrf1_proteomics/__init__.py"

[tool.pytest]
addopts = ["-q"]
minversion = "9.0"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
